packages/toi/test/fixtures/invalid/bad-tier.toi
{
  "$toi": "1.0.0",
  "$tier": "global",
  "identity": {
    "author": "tier not in enum"
  }
}
